# transkripsiArsip

./: .env.example  .gitignore  README.md  prompt.txt.example  pyproject.toml
output/data_hasil_transkripsi/: halaman_02.json  halaman_02.txt  pidato_soekarno.json  pidato_soekarno.txt
output_transkripsi/data_hasil_transkripsi/json/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json
output_transkripsi/data_hasil_transkripsi/txt/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
src/transkripsi_arsip/: __init__.py  main.py  ocr.py  utils.py
